--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ header[role="header"].header-top section p{ font-size:19px; line-height:20px; fo
 #quote-carousel {
     padding: 0 10px 30px 10px;
     margin-top: 60px;
+		min-height: 300px;
 }
 #quote-carousel .carousel-control {
     background: none;
